--- a/views/timeline.ejs
+++ b/views/timeline.ejs
@@ -109,19 +109,18 @@
                           <input  type="hidden"
                                   name="isLikedInput" 
                                   <%  if (!currentUser) { %>
-                                        value=""
+                                        value="notLoggedIn"
                                   <%  } else if (currentUser && (user.chirps[i].usersLiked.length === 0)) { %>
                                           value="false";
                                   <%  } else { %>
-                                      <%  user.chirps[i].usersLiked.forEach(function(userId){ %> 
-                                        <% if (userId = currentUser._id) { %>
+                                      <%  user.chirps[i].usersLiked.forEach(function(userId){ %>
+                                        <% if (userId.toString() === currentUser._id.toString()) { %>
                                             value="true"
                                         <%  return; %>
                                         <% } else { %>
                                             value="false"
                                         <% } %>
                                     <%    }); %>
-                                    
                                   <% } %>
                           > <!-- END: input -->
                           <i class="far fa-heart"></i>
