--- a/views/timeline.ejs
+++ b/views/timeline.ejs
@@ -90,7 +90,7 @@
         <% } else { %>
           <ul>
             <% for (let i = 0; i < user.chirps.length; i++) { %>
-              <li class="chirp" data-chirp-id="<%= user.chirps[i]._id %>">
+              <li class="chirp">
                 <div class="chirp-user-pic"></div>
                 <div class="chirp-content">
                   <div class="chirp-content__top">
