Minor tweaks to text in right hand sidebar

--- a/views/timeline.ejs
+++ b/views/timeline.ejs
@@ -131,18 +131,17 @@
 
       <div class="sidebar-right">
         <div class="sidebar-right-gecko">
-          <img src="https://www.freeiconspng.com/uploads/lizard-icon-30.png" alt="Lizard Save Icon Format">
+          <img src="https://www.freeiconspng.com/uploads/lizard-icon-30.png" alt="Lizard">
         </div>
         <div class="sidebar-right-footer">
           <ul>
             <li>
-              Cohort:
-              <a href="https://chingu.io/" target="_blank">Chingu</a>
+              <a href="https://chingu.io/" target="_blank">Chingu Cohort 5</a>
             </li>
             <li>
               Collaborators:
-              <a href="https://github.com/tymeart" target="_blank">Tiffany</a>
-              <a href="https://github.com/jaredschiller" target="_blank">Jared</a>
+              <a href="https://github.com/tymeart" target="_blank">Tiffany</a>,
+              <a href="https://github.com/jaredschiller" target="_blank">Jared</a>,
               <a href="https://github.com/simonxcode" target="_blank">Simon</a>
             </li>
             <li>
