--- a/views/timeline.ejs
+++ b/views/timeline.ejs
@@ -42,7 +42,7 @@
   <div class="main-page-container">
     <div class="heroColor-container">
       <div class="heroColor alignedToMainGrid">
-          <div class="profileAvatar"></div>
+        <div class="profileAvatar"></div>
       </div>
     </div>
 
@@ -64,10 +64,10 @@
           <li><h3><%= user.profileData.firstLastName %></h3></li>
           <li><a href="/timeline/<%= user.username %>">@<%= user.username %></a></li>
           <li><%= user.profileData.bio %></li>
-          <li><i class="fas fa-map-marker-alt fa-fw"></i><%= user.profileData.location %></li>
-          <li><i class="fas fa-link fa-fw"></i><%= user.profileData.website %></li>
+          <li><% if (user.profileData.location) { %><i class="fas fa-map-marker-alt fa-fw"></i><% } %><%= user.profileData.location %></li>
+          <li><% if (user.profileData.website) { %><i class="fas fa-link fa-fw"></i><% } %><%= user.profileData.website %></li>
           <li><i class="far fa-calendar-alt fa-fw"></i>Joined <%= user.joinedDate.toLocaleDateString('en-US', {month: 'long', year: 'numeric'}) %></li>
-          <li><i class="fas fa-birthday-cake fa-fw"></i>Born on <%= user.profileData.birthdate %></li>
+          <li><% if (user.profileData.birthdate) { %><i class="fas fa-birthday-cake fa-fw"></i>Born on <% } %><%= user.profileData.birthdate %></li>
         </ul>
       </div>
       
