--- a/views/timeline.ejs
+++ b/views/timeline.ejs
@@ -40,7 +40,7 @@
   <div class="main-page-container">
     <div class="heroColor-container">
       <div class="heroColor alignedToMainGrid">
-        <div class="profileAvatar"></div>
+        <div class="profileAvatar"><i class="fas fa-user"></i></div>
       </div>
     </div>
 
@@ -85,7 +85,7 @@
           <ul>
             <% for (let i = 0; i < user.chirps.length; i++) { %>
               <li class="chirp">
-                <div class="chirp-user-pic"></div>
+                <div class="chirp-user-pic"><i class="fas fa-user"></i></div>
                 <div class="chirp-content">
                   <div class="chirp-content__top">
                     <div>
