--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -14,7 +14,7 @@
     <div class="LandingPage-content">
       <div class="LandingPage-signupBlock">
         <div class="LandingPage-signupContent">
-          <h1 class="LandingPage-signup__title">your chirp, your story wating to be heard</h1>
+          <h1 class="LandingPage-signup__title">Your chirp, your story wating to be heard</h1>
           <h2 class="LandingPage-signup__subtitle">Join Chirpper today.</h2>
           <div class="LandingPage-signup-buttons">
             <a class="btn btn-primary" href="/createUser">Sign Up</a>
