Break long strings in chirps so they don't stretch out the page

--- a/public/css/timeline.css
+++ b/public/css/timeline.css
@@ -288,6 +288,7 @@ textarea:focus {
 
 .chirp-content__body {
   margin: 10px 0px;
+  word-break: break-word;
 }
 
 .chirp-content__likes-container {
