--- a/views/timeline.ejs
+++ b/views/timeline.ejs
@@ -59,11 +59,11 @@
     <div class="main-grid alignedToMainGrid">
       <div class="profile-sidebar">
         <ul class="timeline-user-details">
-          <li><h3><%= user.profileData.firstLastName %></h3></li>
+          <% if (user.profileData.firstLastName) { %><li><h3><%= user.profileData.firstLastName %></h3></li><% } %>
           <li><a href="/timeline/<%= user.username %>">@<%= user.username %></a></li>
-          <li><%= user.profileData.bio %></li>
-          <li><% if (user.profileData.location) { %><i class="fas fa-map-marker-alt fa-fw"></i><% } %><%= user.profileData.location %></li>
-          <li><% if (user.profileData.website) { %><i class="fas fa-link fa-fw"></i><% } %><%= user.profileData.website %></li>
+          <% if (user.profileData.bio) { %><li><%= user.profileData.bio %></li><% } %>
+          <% if (user.profileData.location) { %><li><i class="fas fa-map-marker-alt fa-fw"></i><%= user.profileData.location %></li><% } %>
+          <% if (user.profileData.website) { %><li><i class="fas fa-link fa-fw"></i><%= user.profileData.website %></li><% } %>
           <li><i class="far fa-calendar-alt fa-fw"></i>Joined <%= user.joinedDate.toLocaleDateString('en-US', {month: 'long', year: 'numeric'}) %></li>
           <% if (user.profileData.birthdate) { %><li><i class="fas fa-birthday-cake fa-fw"></i>Born on <%= user.profileData.birthdate.toLocaleDateString('en-US', {month: 'long', day: 'numeric'}) %></li><% } %>
         </ul>
