--- a/public/css/timeline.css
+++ b/public/css/timeline.css
@@ -10,7 +10,7 @@ body {
 
 .alignedToMainGrid {
   max-width: 1190px;
-  min-width: 1190px;
+  min-width: 320px;
   margin: 0 auto;
 }
 
@@ -85,6 +85,7 @@ body {
 .sidebar-right-gecko {
   background-color: #fff;
   height: 300px; 
+  margin-right: 15px;
 } 
 
 .sidebar-right-footer {
@@ -159,6 +160,7 @@ img {
   flex-direction: row;
   justify-content: flex-end;
   align-items: center;
+  padding: 15px; 
 }
 
 .editProfile-button {
